--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
+										<li><span class="icon fa-gem" alt="Joya"><span class="label">Lorem</span></span></li>
 										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
 										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
@@ -93,7 +93,7 @@
 							</section>
 
 							<!-- Panel Contact -->
-							<section class="panel color1-alt">
+							<section class="panel color5">
 								<div class="intro">
 									<h2 class="major">Contact</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
