--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
 							</section>
 
 							<!-- Panel Contact -->
-							<section class="panel color5">
+							<section class="panel color0">
 								<div class="intro">
-									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Contactatanos</h2>
+									<p>Dejanos tu mensaje despues del tono, ok?</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
 										<form method="post" action="#">
 											<div class="fields">
 												<div class="field half">
-													<label for="name">Name</label>
+													<label for="name">Nombre</label>
 													<input type="text" name="name" id="name" />
 												</div>
 												<div class="field half">
@@ -111,7 +111,7 @@
 													<input type="email" name="email" id="email" />
 												</div>
 												<div class="field">
-													<label for="message">Message</label>
+													<label for="message">Mensaje</label>
 													<textarea name="message" id="message" rows="4"></textarea>
 												</div>
 											</div>
